April 11th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Fix bug in snmpttconvertmib:  --ARGUMENTS {} line was expected to have
  one space between ARGUMENTS and {}.  It can now be any amount of white
  space, or no space at all.

November 19th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Allow for .* wildcard.  Only .x.* worked before.

November 19th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.0.1
- Change snmpttconvertmib to allow for DEFINITIONS::= (no spaces)

Aug 30th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.0

Aug 18th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Change PostreSQL and ODBC ping functions to not use errno like in MySQL.
  Thanks to mike at mccartney.net.

Aug 16th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Change version to 0.9.5
- Add daemon sample traps
- Fixed missing _unknown in unknown logging for PostgreSQL, ODBC
  and Win32::ODBC.  Thanks to mike at mccartney.net 

Aug 15th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Moved xx_ping_on_insert check before if (defined ($dbh..))

Aug 10th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added database ping support to PostgreSQL and DBD::ODBC.  Added debug
  logging improvements for database connect and INSERT sections.  Thanks
  to mike at mccartney.net.

Debug output now prints out $n variable number beside 'Ent Value x' such as 
  'Ent Value 2 ($3):' to reduce confusion when troubleshooting.

Aug 9th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Debug output now prints out $n variable number beside 'Ent Value x' such as 
  'Ent Value 2 ($3):' to reduce confusion when troubleshooting.

July 14th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- snmpttconvertmib:  Fix bug with infinite loop when processing VARIABLES
  section if MIB file had spaces after }.  Thanks to mike at mccartney.net

July 5th, 2004: Alex Burger <alex_b@users.sourceforge.net>