@@ -2,7 +2,7 @@
 #
 # SNMPTTCONVERT v1.0
 #
-# Copyright 2002 Alex Burger
+# Copyright 2002-2005 Alex Burger
 # alex_b@users.sourceforge.net
 # 
 # 4/11/2002
