@@ -2,7 +2,7 @@
 #
 # SNMPTTCONVERTMIB v1.0.1
 #
-# Copyright 2002 Alex Burger
+# Copyright 2002-2005 Alex Burger
 # alex_b@users.sourceforge.net
 #
 # 8/14/2002
